recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  
  gauche(angle);
  avance(length);
  tree(steps-1, length*shrink, angle, shrink);
  recule(length);
  
  
  droite(2*angle);
  avance(legngth);
  tree(steps-1, length*shrink, angle, shrink);
  recule(length);
  gauche(angle);
  
  
}